--- a/IMDb buddy buddy/Style.css
+++ b/IMDb buddy buddy/Style.css
@@ -211,4 +211,11 @@ height:80%;
     width:100%;
     height:100%;
     margin:0px;
+    background-color: transparent;
+    border: 0;
+    color: white;
+}
+
+.Sign-in> :hover{
+    background-color: grey;
 }
