--- a/IMDb buddy buddy/Style.css
+++ b/IMDb buddy buddy/Style.css
@@ -107,7 +107,7 @@
 
 .s-bar {
     /* padding: 10px; */
-    background-color: white;
+    background-color: red;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
