--- a/IMDb buddy buddy/Style.css
+++ b/IMDb buddy buddy/Style.css
@@ -65,14 +65,10 @@
 }
 
 .All-button{
-    display: flex;
-    flex-direction:row;
-    justify-content: center;
-    align-items: center;
-    /* formatting */
     padding:0;
     width:10%;
     height:100%
+    
 
 
     /* background-color: transparent;
@@ -219,3 +215,10 @@ height:80%;
 .Sign-in> :hover{
     background-color: grey;
 }
+
+.languge-button button{
+    background-color: transparent;
+    color: white;
+    border: 0;
+}
+
