--- a/IMDb buddy buddy/Style.css
+++ b/IMDb buddy buddy/Style.css
@@ -9,7 +9,7 @@
   }
  */
 
- .flex-align{
+ #flex-align{
     display: flex;
  flex-direction: row;
  justify-content:center;
@@ -223,20 +223,50 @@
     }
 
 /* Main body styling  */
+
+    /* .background-black{
+        width:100%;
+        background-color: black; 
+    }*/
     .body{
         background: black;
-        width:100%;
-        height:100%;
-        border:1;
-        color:white
+        width:80%;
+         width:100%; 
+        height:100%; 
     }
 
-    .body * {
+    /* .body * {
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-self: center;
+        flex-wrap: wrap;
+
+    } */
+
+    .Main-page{
+        width:80%;
+        display: flex;
+         flex-direction: column;
+         justify-content:space-around;
+         align-self:center;
+    }
+
+    #trailer{
+        width: 100%;
+    }
+
+    #trailer img{
+        width: 100%;
 
     }
 
-    
+    #Poster{
+        width:20%
+    }
+
+    #Poster img{
+        width:100%;
+        justify-content: flex-start;
+        
+    }
