--- a/IMDb buddy buddy/Style.css
+++ b/IMDb buddy buddy/Style.css
@@ -224,32 +224,51 @@
 
 /* Main body styling  */
 
-    /* .background-black{
+    .background-black{
         width:100%;
         background-color: black; 
-    }*/
-    .body{
-        background: black;
+    }
+    /* .body{
         width:80%;
          width:100%; 
         height:100%; 
-    }
-
-    /* .body * {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-self: center;
-        flex-wrap: wrap;
-
+        margin-left:30%;
     } */
 
-    .Main-page{
-        width:80%;
+    .body {
         display: flex;
-         flex-direction: column;
-         justify-content:space-around;
-         align-self:center;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-self:center;
+        flex-wrap: wrap;
+        width:70%;
+        margin-left:auto;
+        margin-right:auto;
+
+    }
+
+    .Main-page{
+        width:71%;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-around;
+        align-self:center;
+        align-items: start;
+    }
+
+    #Opacity-trailer{
+        position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom right, blue, red);
+    opacity: 0.75;
+  }
     }
 
     #trailer{
@@ -259,14 +278,14 @@
     #trailer img{
         width: 100%;
 
+
     }
 
     #Poster{
-        width:20%
+        width:20%;
     }
 
     #Poster img{
         width:100%;
-        justify-content: flex-start;
-        
+        margin-top:-600px;
     }
