--- a/IMDb buddy buddy/Style.css
+++ b/IMDb buddy buddy/Style.css
@@ -17,7 +17,7 @@
  }
 
 * {
-    margin:10;
+    margin:0;
     padding:0;
     box-sizing: border-box;
 }
@@ -254,10 +254,11 @@
         justify-content:space-around;
         align-self:center;
         align-items: start;
+        background-image: linear-gradient(90deg, rgba(0,0,0,1) 1%,rgba(0,0,0,0))
     }
 
 #Opacity-trailer{
-    
+
 }
 
     /* #Opacity-trailer{
