--- a/IMDb buddy buddy/maincss.css
+++ b/IMDb buddy buddy/maincss.css
@@ -21,8 +21,22 @@ body {
     color: white;
 }
 
+.catagory-description {
+    margin-top: 3vh;
+    color: lightgray;
+}
+
+.signin {
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
+    color: #2196F3;
+}
+
 
 /* element visiblity tool */
-* + *{
+* {
     border: 1px solid white;
 }
+
