--- a/IMDb buddy buddy/section3.css
+++ b/IMDb buddy buddy/section3.css
@@ -5,19 +5,103 @@
     justify-content: center;
 }
 
+.popular-movie-scroll {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center; 
+    overflow: scroll;
+}
+
+.popular-movie-scroll > * {
+    margin-left: 10px;
+}
+
 .bg-image-topwatch {
     height: 300px;
-    width: 50px;
+    display: flex;
+    flex-direction: row;
+}
 
+.top-movie-container {
+    width: 85px;
+}
+
+.top-movie-container{
+    background-color: #1a1a1a;
+    -webkit-transition: 0.5s;
+}
+
+.bg-image-topwatch1 {
     background-image: url(https://m.media-amazon.com/images/M/MV5BYTc5OWNhYjktMThlOS00ODUxLTgwNDQtZjdjYjkyM2IwZTZlXkEyXkFqcGdeQXVyNTA3MTU2MjE@._V1_.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-
-    display: flex;
-
-    -webkit-transition: 0.5s;
+    display: block
 }
+
+.bg-image-topwatch2 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BYTY0YTgwZjUtYzJiNy00ZDQ2LWFlZmItZThhMjExMjI5YWQ2XkEyXkFqcGdeQXVyMTM1NjM2ODg1._V1_.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bg-image-topwatch3 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BMGQ1OWNlY2QtMGY1NC00ZDkxLWJhZTktMzg5Mzk5YWY1YzA1XkEyXkFqcGdeQXVyMTU5OTc2NTk@._V1_.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-image-topwatch4 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BNWM0ZGJlMzMtZmYwMi00NzI3LTgzMzMtNjMzNjliNDRmZmFlXkEyXkFqcGdeQXVyMTM1MTE1NDMx._V1_.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-image-topwatch5 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BMTc5MDE2ODcwNV5BMl5BanBnXkFtZTgwMzI2NzQ2NzM@._V1_.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-image-topwatch6 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BZGEwYmMwZmMtMTQ3MS00YWNhLWEwMmQtZTU5YTIwZmJjZGQ0XkEyXkFqcGdeQXVyMTI5MzA5MjA1._V1_FMjpg_UX1000_.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-image-topwatch7 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BOGYwYTA5M2QtMTk3Zi00ZjdjLWFkNDUtYzg4MjM0ZGI0MGU1XkEyXkFqcGdeQXVyODIyOTEyMzY@._V1_.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-image-topwatch8 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BZWMyYzFjYTYtNTRjYi00OGExLWE2YzgtOGRmYjAxZTU3NzBiXkEyXkFqcGdeQXVyMzQ0MzA0NTM@._V1_FMjpg_UX1000_.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-image-topwatch9 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BYjJhMjcwNjAtODc0ZC00Yjg5LWExYzEtMzc5OWJhNjI1NTQ4XkEyXkFqcGdeQXVyNTA3MTU2MjE@._V1_FMjpg_UX1000_.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-image-topwatch10 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BMjMxNjY2MDU1OV5BMl5BanBnXkFtZTgwNzY1MTUwNTM@._V1_.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-image-topwatch11 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BODNiODVmYjItM2MyMC00ZWQyLTgyMGYtNzJjMmVmZTY2OTJjXkEyXkFqcGdeQXVyNzk3NDUzNTc@._V1_.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 
 .add-to {
     position: relative;
@@ -75,11 +159,121 @@
 
 .watchlist-container:hover {
     scale: 1.1;
-    transition: 0.1s;
+    transition: 0.2s;
 }
 
-.bg-image-topwatch:hover {
-    transition: 0.2s;
+
+.top-movie-container:hover{
+    transition: 0.3s;
     width: 200px;
     
+}
+
+.desc-container {
+
+    background-color: transparent;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.rating-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.rating-container > svg {
+    display: inline;
+    color: white;
+}
+
+.rating-container > p {
+    display: inline;
+    color: lightgray;
+    padding-right: 10px;
+    margin-left: 10px;
+}
+
+.rate-it {
+    display: none;
+}
+
+.rate-it:hover{
+    background-color: rgba(255, 255, 255, .2);
+    border-radius: 10px;
+}
+
+.top-movie-container:hover > .desc-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.desc-container-name > p {
+    margin-top: 5px;
+    padding-bottom: 15px;
+    color: white;
+}
+
+.transport-watchlist {
+    text-decoration: none;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: bold;
+    color: rgba(70, 178, 255, 1);
+}
+
+.transport-watchlist-container {
+    display: none;
+}
+
+.information > a{
+    display: none;
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    padding: 3px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.information {
+    display: none;
+}
+
+.top-movie-container:hover > .information{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 5px;
+    transition-delay: 5s;
+}
+.top-movie-container:hover > .transport-watchlist-container {
+    
+    background-color: rgba(255, 255, 255, 0.05);
+
+    display: flex;
+    flex-direction: column;
+    padding: 5px 0 5px 0;
+    margin: 5px;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+}
+
+.top-movie-container:hover .rate-it {
+    display: block;
+    padding: 5px;
+}
+
+.information > a:hover {
+    background-color: rgba(255, 255, 255, .2);
+    border-radius: 5px;
 }
