--- a/IMDb buddy buddy/maincss.css
+++ b/IMDb buddy buddy/maincss.css
@@ -36,7 +36,155 @@ body {
 
 
 /* element visiblity tool */
-* {
+/* * {
     border: 1px solid white;
+} */
+
+/* movie scroll */
+
+
+.add-to {
+    position: relative;
+    width: 30px;
+    height: 55px;
+
+    background-color: rgba(0, 0, 0, 0.4);
+
+    border-left:1px solid gray ;
+    border-top: 1px solid gray;
+    border-right: 1px solid gray;
+    border-bottom: none;
+    color: white;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding-bottom: 15px;
+
+    margin-right: 90%;
+    margin-bottom: 100%;
+
 }
 
+.add-to::after{
+    position: absolute;
+    content: "";
+    width: 23px;
+    height: 23px;
+    
+    border-left: 1px solid gray;
+    border-top: 1px solid gray;
+
+    backdrop-filter: brightness(170%);
+
+    transform: rotate(45deg);
+
+    margin-top: 73px;
+}
+
+
+.add-to {
+    overflow: hidden;
+}
+
+.watchlist-container {
+    height: 55px;
+}
+
+.desc-container {
+
+    background-color: transparent;
+
+    width: 168.72px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.rating-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.rating-container > svg {
+    display: inline;
+    color: white;
+}
+
+.rating-container > p {
+    display: inline;
+    color: lightgray;
+    padding-right: 10px;
+    margin-left: 10px;
+}
+
+.rate-it {
+    background-color: rgba(255, 255, 255, .2);
+    border-radius: 10px;
+}
+
+.desc-container-name > p {
+    margin-top: 5px;
+    padding-bottom: 15px;
+    color: white;
+}
+
+.transport-watchlist {
+    text-decoration: none;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: bold;
+    color: rgba(70, 178, 255, 1);
+}
+
+.transport-watchlist-container {
+    background-color: rgba(255, 255, 255, 0.05);
+
+    display: flex;
+    flex-direction: column;
+    padding: 5px 0 5px 0;
+    margin: 5px;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+}
+
+.information > a{
+    display: none;
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    padding: 3px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.information {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 5px;
+}
+
+
+.information > a:hover {
+    background-color: rgba(255, 255, 255, .2);
+    border-radius: 5px;
+}
+
+
+.add-to:hover,
+.add-to:hover::after {
+    border-left:1px solid white ;
+    border-right:1px solid white ;
+    border-top:1px solid white ;
+}
