--- a/IMDb buddy buddy/Style.css
+++ b/IMDb buddy buddy/Style.css
@@ -17,13 +17,14 @@
  }
 
 * {
-    margin:0;
-    padding:0;
+    /* margin:0;
+    padding:0; */
     box-sizing: border-box;
 }
 
 
 .hero-title{
+    /* padding:83.450px; */
     height:50px;
     width:100%;
     gap: 2px;
@@ -212,3 +213,26 @@ height:80%;
     height:100%;
     margin:0px;
 }
+
+.section-1{
+display: flex;
+flex-direction: row;
+column-gap: 5px ;
+}
+
+.carousel-container{
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    background-color: white;
+    height: 45vh;
+    width: 60vw;
+    margin-right:0px;
+    margin-left: 83.450px;
+  }
+  
+.Section1-h1{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #f5c518;
+}
+  
