--- a/IMDb buddy buddy/section1.css
+++ b/IMDb buddy buddy/section1.css
@@ -31,9 +31,12 @@ html {
       display: flex;
       flex-direction: row;
       overflow: scroll;
+      background-image: linear-gradient(white,gray);
 
       scroll-snap-type: x mandatory;
   }
+
+  
   
   .scroll > * {
       display: inline-block;
@@ -73,4 +76,24 @@ html {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+  }
+
+  #transitionright1 {
+    width: 40px;
+    height: 100px;
+    background-color: rgba(0,0,0,1);
+
+    border-radius: 10px;
+    border: 1px solid white;
+    
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    left: 60%;
+    top: 25%;
+    bottom: auto;
+
+    position: absolute;
   }
