--- a/IMDb buddy buddy/Showcase-scroll-screen.css
+++ b/IMDb buddy buddy/Showcase-scroll-screen.css
@@ -1,10 +1,102 @@
-.carousel-container{
+/* .carousel-container{
   display:flex;
   flex-direction: row;
   justify-content: flex-start;
   background-color: white;
   height: 45vh;
   width: 60vw;
+}
+ */
+
+
+
+
+
+
+
+ .wrap {
+  overflow: hidden;
+}
+
+.carousel {
+  display: flex;
+  flex-direction: row;
+  left: -100%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  transform: translateX(100%);
+}
+
+@media (min-width: 30em) {
+  .carousel {
+    left: -33.33333%;
+    transform: translateX(33.33333%);
+  }
+}
+
+@media (min-width: 40em) {
+  .carousel {
+    left: -20%;
+    transform: translateX(20%);
+  }
+}
+
+.carousel.is-reversing {
+  transform: translateX(-100%);
+}
+
+@media (min-width: 30em) {
+  .carousel.is-reversing {
+    transform: translateX(-33.33333%);
+  }
+}
+
+@media (min-width: 40em) {
+  .carousel.is-reversing {
+    transform: translateX(-20%);
+  }
+}
+
+.carousel.is-set {
+  transform: none;
+  transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.carousel-seat {
+  background: #ddd;
+  flex: 1 0 100%;
+  order: 2;
+}
+
+.carousel-seat:nth-child(even) {
+  background: #d5d5d5;
+}
+
+@media (min-width: 30em) {
+  .carousel-seat {
+    flex-basis: 33.33333%;
+  }
+}
+
+@media (min-width: 40em) {
+  .carousel-seat {
+    flex-basis: 20%;
+  }
+}
+
+.carousel-seat.is-ref {
+  order: 1;
+}
+
+h2 {
+  color: #aaa;
+  font-size: 7em;
+  font-weight: normal;
+  margin: 0;
+  padding: 0.6em 0;
+  text-align: center;
 }
 
 
@@ -18,96 +110,3 @@
 
 
 
-
-
-
-
-
-
-
-
-/* .wrap {
-    overflow: hidden;
-  }
-  
-  .carousel {
-    display: flex;
-    flex-direction: row;
-    left: -100%;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    transform: translateX(100%);
-  }
-  
-  @media (min-width: 30em) {
-    .carousel {
-      left: -33.33333%;
-      transform: translateX(33.33333%);
-    }
-  }
-  
-  @media (min-width: 40em) {
-    .carousel {
-      left: -20%;
-      transform: translateX(20%);
-    }
-  }
-  
-  .carousel.is-reversing {
-    transform: translateX(-100%);
-  }
-  
-  @media (min-width: 30em) {
-    .carousel.is-reversing {
-      transform: translateX(-33.33333%);
-    }
-  }
-  
-  @media (min-width: 40em) {
-    .carousel.is-reversing {
-      transform: translateX(-20%);
-    }
-  }
-  
-  .carousel.is-set {
-    transform: none;
-    transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  
-  .carousel-seat {
-    background: #ddd;
-    flex: 1 0 100%;
-    order: 2;
-  }
-  
-  .carousel-seat:nth-child(even) {
-    background: #d5d5d5;
-  }
-  
-  @media (min-width: 30em) {
-    .carousel-seat {
-      flex-basis: 33.33333%;
-    }
-  }
-  
-  @media (min-width: 40em) {
-    .carousel-seat {
-      flex-basis: 20%;
-    }
-  }
-  
-  .carousel-seat.is-ref {
-    order: 1;
-  }
-  
-  h2 {
-    color: #aaa;
-    font-size: 7em;
-    font-weight: normal;
-    margin: 0;
-    padding: 0.6em 0;
-    text-align: center;
-  }
-   */
