--- a/IMDb buddy buddy/section1.css
+++ b/IMDb buddy buddy/section1.css
@@ -1,7 +1,4 @@
-html {
-    height: 100%;
-    width: 100%;
-  }
+
   
   * {
     padding: 0;
@@ -20,8 +17,8 @@ html {
   /* Section 1 horizonal scroll */
   .major-container {
       display: block;
-      height: 50vh;
-      width: 65vw;
+      height: 500px;
+      width: 900px;
       border: 3px solid black;
   }
   
@@ -30,6 +27,9 @@ html {
       width: 100%;
       display: flex;
       flex-direction: row;
+      justify-content: start;
+      align-items: center;
+      
       overflow: scroll;
       background-image: linear-gradient(white,gray);
 
@@ -37,11 +37,9 @@ html {
       scroll-behavior: smooth;
   }
 
-  
-  
-  .scroll > * {
-      display: inline-block;
-      width: 60vw;
+  .scroll > *{
+    display: inline-block;
+    width: 900px;
   }
   
   .scroll {
@@ -72,31 +70,63 @@ html {
     color: white;
   }
 
-  .img1 {
-    background-image: url(https://mlpnk72yciwc.i.optimole.com/cqhiHLc.IIZS~2ef73/w:auto/h:auto/q:75/https://bleedingcool.com/wp-content/uploads/2023/08/Marvel-Studios-I-Am-Groot-Season-2-_-Official-Trailer-_-Disney-0-28-screenshot.jpg);
+  .scroll {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
   }
+  .img1 {
+    background-image: url(https://mlpnk72yciwc.i.optimole.com/cqhiHLc.IIZS~2ef73/w:auto/h:auto/q:75/https://bleedingcool.com/wp-content/uploads/2023/08/Marvel-Studios-I-Am-Groot-Season-2-_-Official-Trailer-_-Disney-0-28-screenshot.jpg);
+  }
 
+  .img2{
+    background-image: url(https://m.media-amazon.com/images/M/MV5BNjFiMTU5NDEtMGM5Mi00MzNhLTk2MjYtYTJmOTcxZjI2MjdiXkEyXkFqcGdeQWFsZWxvZw@@._V1_.jpg);
+  }
+
+  .img3 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BZmMxZmY5M2YtZDA4MS00NmE0LThmZmYtNDg4ZTNhOTY2M2UyXkEyXkFqcGdeQWFsZWxvZw@@._V1_QL75_UX500_CR0,0,500,281_.jpg);
+  }
+
+  .img4 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BMjliZjMxNjktZjkyOC00OTM0LThiZjMtYmRlMjBiMTNlMjVkXkEyXkFqcGdeQXVyNzY1ODU1OTk@._V1_.jpg);
+  }
+
+  .img5{
+    background-image: url(https://media.gq.com/photos/64dbc2faa62a2e71fb9852f2/16:9/w_2560%2Cc_limit/DSC03182_bw_rt2%2520copy.jpg);
+  }
+
+  .img6 {
+    background-image: url(https://m.media-amazon.com/images/M/MV5BM2EyZWYzOWYtYzc3Ny00ZmFiLTlmMzYtOWM1YzdkZjVlNDIyXkEyXkFqcGdeQXZ3ZXNsZXk@._V1_.jpg);
+  }
+
+  .img7 {
+    background-image: url(https://resizing.flixster.com/VzZ0IGUioQAY-pPCLxepIyAghNw=/270x160/v2/https://statcdn.fandango.com/MPX/image/NBCU_Fandango/352/391/thumb_AED75B6F-989D-4111-9E5D-71A1E16F1B31.jpg);
+  }
+
+  .img8 {
+    background-image: url(https://flxt.tmsimg.com/assets/p23922349_v_v8_aa.jpg);
+  }
+
+  .button-right-container {
+    position: absolute;
+    top: 300px;
+    left: calc(800px + 9vw);
+  }
   #transitionright1 {
     width: 40px;
     height: 100px;
-    background-color: rgba(0,0,0,1);
+    background-color: rgba(0,0,0,0.4);
 
     border-radius: 10px;
     border: 1px solid white;
+    font-size: 200%;
     
     color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-    left: 60%;
-    top: 25%;
-    bottom: auto;
+    position: relative;
+  }
 
-    position: absolute;
+  #transitionright1:hover{
+    color: #f5c518;
   }
 
   .minor-section{
