--- a/IMDb buddy buddy/section7.css
+++ b/IMDb buddy buddy/section7.css
@@ -25,7 +25,10 @@ gap: 20px;
     color: white;
     display: flex;
     flex-direction: row;
-    margin-top:-20px;
+    margin-top:-25px;
     padding-bottom:10px;
 }
 
+i{
+    color: white;
+}
