--- a/IMDb buddy buddy/section8.css
+++ b/IMDb buddy buddy/section8.css
@@ -1,12 +1,20 @@
 .section-8{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color:transparent;
-    border-bottom: 5px;
-    box-shadow:none ;
-    border-color: #f5c518;
-    
-    border:none ;
-    border-bottom: 5px;
-    padding:10px;
+    margin-top: 10px;
+
+    border:none;
+    border-bottom: 2px solid #f5c518;
+
     color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 10px;
+}
+
+.section-8:hover{
+    background-color: rgba(255,255,255,0.2);
+}
+
+.section-8:active {
+    background-image: radial-gradient(circle at center, white 0,transparent 100%);
+    background-color: rgba(255, 255, 255, 0.4);
 }
